--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^8.10.0",
     "uid": "^2.0.0",
     "vue": "^3.0.11",
+    "vue-meta": "^2.4.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
